# VIO-Course

./: README.md
第10章-VIO概述与课程介绍/: README.md
第10章-VIO概述与课程介绍/code/: eigen_test.cpp
第11章-IMU传感器/: README.md
第11章-IMU传感器/code/: imu.cpp
第12章-基于优化的IMU与视觉信息融合/: README.md
第12章-基于优化的IMU与视觉信息融合/CurveFitting_LM/: CMakeLists.txt
第12章-基于优化的IMU与视觉信息融合/CurveFitting_LM/app/: CurveFitting.cpp
第12章-基于优化的IMU与视觉信息融合/CurveFitting_LM/backend/: problem.cc  problem.h
第13章-基于滑动窗口算法的VIO系统-可观性和一致性/: README.md
第13章-基于滑动窗口算法的VIO系统-可观性和一致性/code/: CMakeLists.txt  hessian_nullspace_test.cpp
第14章-后端优化实践-逐行手写求解器/: README.md
第14章-后端优化实践-逐行手写求解器/code/backend/: problem.cc
第15章-视觉前端/: README.md
第15章-视觉前端/code/: triangulate.cpp
第16章-VINS系统构建/: README.md
第16章-VINS系统构建/VINS-Course/: CMakeLists.txt  pose_output.txt
第16章-VINS系统构建/VINS-Course/config/: euroc_config.yaml
第16章-VINS系统构建/VINS-Course/include/: System.h
第16章-VINS系统构建/VINS-Course/src/: System.cpp
第16章-VINS系统构建/VINS-Course/test/: simulation_test.cpp
第17章-相机和IMU时间戳同步/: README.md
第18章-课程总结/: README.md
第19章-VIO作业-更优的优化策略-更快的Hessian矩阵/: README.md
第1章-视觉SLAM概述与预备知识/: README.md
第1章-视觉SLAM概述与预备知识/code/: CMakeLists.txt
第1章-视觉SLAM概述与预备知识/code/cmake/: FindGLOG.cmake  FindHELLO.cmake
第1章-视觉SLAM概述与预备知识/code/libhello/: CMakeLists.txt  hello.cpp
第1章-视觉SLAM概述与预备知识/code/src/: CMakeLists.txt  useHello.cpp
第1章-视觉SLAM概述与预备知识/code/tests/: CMakeLists.txt  demo.cpp
第2章-三维空间的刚体运动/: README.md
第2章-三维空间的刚体运动/code/: CMakeLists.txt  calCoord.cpp  eigenMatrix.cpp
第3章-李群与李代数 /: README.md
第3章-李群与李代数 /code/: CMakeLists.txt  draw_trajectory.cpp
第4章-相机模型与非线性优化/: README.md
第4章-相机模型与非线性优化/code/: CMakeLists.txt  disparity.cpp  fisheye.cpp  gaussnewton.cpp  undistort_image.cpp
第5章-特征点法视觉里程计/: README.md  第五次作业讲解.pptx
第5章-特征点法视觉里程计/code/: CMakeLists.txt  E2Rt.cpp  GN-BA.cpp  computeORB.cpp  draw_trajectory.cpp
第6章-直接法视觉里程计/: README.md
第6章-直接法视觉里程计/code/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
第7章-后端优化/: README.md
第7章-后端优化/code/: CMakeLists.txt  bal_g2o.cpp  directBA.cpp
第8章-回环检测/: README.md
第9章-Project实现完整的SLAM系统/: README.md
第9章-Project实现完整的SLAM系统/code/: CMakeLists.txt  bal_data_test.cpp  bal_g2o.cpp  bundle_adjustment.cpp  bundle_adjustment.h  camera.cpp  camera.h  common.cpp  cost_function.cpp  cost_function.h  mappoint.cpp  mappoint.h  run_timer.h
